# GeorgiaVotingLocations

./: .gitignore  CNAME  README.md  early_voting.py  fetch_early_voting_locations.py  file_cached_function.py  flake.nix  geocode_place_id_cache.csv  geocode_place_id_cache.json  get_voting_locations.js  index.html  mapbox_geocode.py  scenarios.json  styles.css
data/a0p3d00000LWdF5AAL/: counties.json
data/a0pcs00000DWHflAAH/: errors.geojson
data/county_boundaries/: Georgia.geojson
fetch_voting_locations/: pyproject.toml
fetch_voting_locations/src/fetch_voting_locations/: fetch_early_voting_locations.py  main.py
fetch_voting_locations/src/fetch_voting_locations/utils/: file_cached_function.py  mapbox_geocode.py
js/: app.js  dataset.js  last_updated.js  map_utils.js
voting_location_scenarios/after_5_pm/: 2024-10-15.json  2024-10-17.json  2024-10-18.json  2024-10-19.json  2024-10-20.json  2024-10-21.json  2024-10-23.json  2024-10-24.json  2024-10-25.json  2024-10-26.json  2024-10-27.json  2024-10-28.json  2024-10-29.json  2024-10-30.json  2024-10-31.json  2024-11-01.json  2024-11-04.json
voting_location_scenarios/any_time/: 2024-10-16.json  2024-10-17.json  2024-10-18.json  2024-10-19.json  2024-10-20.json  2024-10-21.json  2024-10-22.json  2024-10-23.json  2024-10-24.json  2024-10-25.json  2024-10-26.json  2024-10-27.json  2024-10-28.json  2024-10-29.json  2024-10-31.json  2024-11-01.json  2024-11-04.json
voting_location_scenarios/before_9_am/: 2024-10-15.json  2024-10-16.json  2024-10-19.json  2024-10-20.json  2024-10-21.json  2024-10-22.json  (+8 more)
(+1338 files in other folders)
