[project]
name = "fetch-voting-locations"
version = "0.1.0"
description = "Fetch voting locations for Georgia elections."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools.package-data]
"fetch_voting_locations" = ["inputs/*"]

[project.scripts]
fetch = "fetch_voting_locations.main:app"


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
